PostgreSQL connection caching and reuse (#131)
